--- a/backend/package.json
+++ b/backend/package.json
@@ -2,22 +2,33 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "src/index.js",
-  "type": "module",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch --no-warnings --loader ts-node/esm src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "npx rimraf dist && tsc",
+    "prod": "node dist/index.js",
+    "db:push": "drizzle-kit push",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.8.1",
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.1",
+    "drizzle-kit": "^0.31.7",
     "prisma": "^6.17.1",
+    "rimraf": "^6.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
+    "postgres": "^3.4.7",
     "zod": "^4.1.12"
   }
 }
