--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,10 @@
     "dev": "tsx watch src/index.ts",
     "build": "npx rimraf dist && tsc",
     "prod": "node dist/index.js",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:push": "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/epbd1 drizzle-kit push",
+    "db:generate": "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/epbd1 drizzle-kit generate",
+    "db:migrate": "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/epbd1 drizzle-kit migrate",
+    "db:studio": "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/epbd1 drizzle-kit studio"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
