--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "db:studio": "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/epbd1 drizzle-kit studio"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "drizzle-kit": "^0.31.7",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
